clean up extra sections

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <div class="container-fluid container-xl position-relative d-flex align-items-center">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
-        <img src="assets/img/logo.png" alt="">
+        <img src="assets/Fall Fest Graphics/Badge/Badge.png" alt="">
         <!-- Uncomment the line below if you also wish to use an text logo -->
-        <!-- <h1 class="sitename">TheEvent</h1>  -->
+        <h1 class="sitename">Quantum Springboard</h1> 
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -129,14 +129,14 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Event Speakers<br></h2>
-
+        Coming Soon...!
       </div><!-- End Section Title -->
 
       <div class="container">
 
         <div class="row gy-4">
 
-          <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+          <!-- <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
               <img src="assets/img/speakers/speaker-1.jpg" class="img-fluid" alt="">
               <div class="member-info">
@@ -152,7 +152,7 @@
                 </div>
               </div>
             </div>
-          </div><!-- End Team Member -->
+          </div>
 
           <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
@@ -170,7 +170,7 @@
                 </div>
               </div>
             </div>
-          </div><!-- End Team Member -->
+          </div>
 
           <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
@@ -188,7 +188,7 @@
                 </div>
               </div>
             </div>
-          </div><!-- End Team Member -->
+          </div>
 
           <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
@@ -206,7 +206,7 @@
                 </div>
               </div>
             </div>
-          </div><!-- End Team Member -->
+          </div> -->
 
         </div>
 
@@ -419,7 +419,7 @@
           <div role="tabpanel" class="col-lg-9  tab-pane fade" id="day-2">
 
             <div class="row schedule-item">
-              <div class="col-md-3"><time>10:00 AM - 12:00 PM</time></div>
+              <div class="col-md-3"><time>12:00 PM - 02:00 PM</time></div>
               <div class="col-md-6">
                 <!-- <div class="speaker">
                   <img src="assets/Fall Fest Graphics/Emojis/Timeline_02.png" alt="Brenden Legros">
@@ -434,7 +434,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-3"><time>06:00 PM - 7:30 PM</time></div>
+              <div class="col-md-3"><time>12:00 PM - 2:00 PM</time></div>
               <div class="col-md-6">
                 <div class="speaker">
                   <img src="assets/Fall Fest Graphics/Emojis/Timeline_03.png" alt="Hubert Hirthe">
@@ -681,7 +681,7 @@
             <div class="row justify-content-center">
               <div class="col-11 col-lg-8 position-relative">
                 <h3>Research School of Physics, ANU</h3>
-                <p>Building 160, Mills Rd, Acton ACT - 2601</p>
+                <p>Building 160, Mills Road, Acton ACT 2601</p>
               </div>
             </div>
           </div>
@@ -694,7 +694,7 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="assets/img/venue-gallery/venue-gallery-1.jpg" class="glightbox" data-gall="venue-gallery">
+              <a href="assets/img/venue-gallery/new-physics-building-front-board.jpg" class="glightbox" data-gall="venue-gallery">
                 <img src="assets/img/venue-gallery/new-physics-building-front-board.jpg" alt="" class="img-fluid">
               </a>
             </div>
@@ -702,24 +702,24 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="assets/img/venue-gallery/venue-gallery-2.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/new-physics-building-front-no-people.jpg" alt="" class="img-fluid">
+              <a href="assets/img/venue-gallery/ANU_Physics_External.jpg" class="glightbox" data-gall="venue-gallery">
+                <img src="assets/img/venue-gallery/ANU_Physics_External.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="assets/img/venue-gallery/venue-gallery-3.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/venue-gallery-3.jpg" alt="" class="img-fluid">
+              <a href="assets/img/venue-gallery/phys-audi.jpg" class="glightbox" data-gall="venue-gallery">
+                <img src="assets/img/venue-gallery/phys-audi.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="assets/img/venue-gallery/venue-gallery-4.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/venue-gallery-4.jpg" alt="" class="img-fluid">
+              <a href="assets/img/venue-gallery/Research_School_of_Physics,_ANU,_Canberra,_2022,_08.jpg" class="glightbox" data-gall="venue-gallery">
+                <img src="assets/img/venue-gallery/Research_School_of_Physics,_ANU,_Canberra,_2022,_08.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -767,10 +767,11 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Hotels</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Resources</h2>
+        <p>Physicists seek a unified theory of quantum and gravity, meanwhile we are curating some quantum computing resources for you... hold tight!</p>
       </div><!-- End Section Title -->
 
+      <template>
       <div class="container">
 
         <div class="row gy-4">
@@ -811,6 +812,7 @@
         </div>
 
       </div>
+      </template>
 
     </section><!-- /Hotels Section -->
 
@@ -1161,6 +1163,7 @@
 
   <footer id="footer" class="footer dark-background">
 
+    <template>
     <div class="footer-top">
       <div class="container">
         <div class="row gy-4">
@@ -1223,6 +1226,7 @@
         </div>
       </div>
     </div>
+    </template>
 
     <div class="copyright text-center">
       <div class="container d-flex flex-column flex-lg-row justify-content-center justify-content-lg-between align-items-center">
