ready bare bones webpage with event schedule and registration link

--- a/index.html
+++ b/index.html
@@ -92,11 +92,12 @@
       <img src="assets/Fall Fest Graphics/Illustration Exports/Full_Illustration.png" alt="" data-aos="fade-in" class="">
 
       <div class="container d-flex flex-column align-items-center text-center mt-auto">
-        <h2 data-aos="fade-up" data-aos-delay="100" class="">CELEBRATING<br><span>100 YEARS</span> OF QUANTUM</h2>
+        <h2 data-aos="fade-up" data-aos-delay="100" class="">CELEBRATING<br><span>100 YEARS</span> OF QUANTUM<br>WITH THE <span>QISKIT FALL FEST</span></h2>
         <p data-aos="fade-up" data-aos-delay="200">18-19 November, The Australian National University, Canberra</p>
-        <div data-aos="fade-up" data-aos-delay="300" class="">
+        <!-- <div data-aos="fade-up" data-aos-delay="300" class="">
           <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn mt-3"></a>
-        </div>
+        </div> -->
+        <a class="btn btn-primary btn-lg d-sm-block btn-danger cta-btn" href="https://anuspringboard.eventbrite.com.au">Register Now!</a>
       </div>
 
       <div class="about-info mt-auto position-relative">
@@ -105,9 +106,7 @@
           <div class="row">
             <div class="col-lg-6">
               <h2>About The Event</h2>
-              <p>Sed nam ut dolor qui repellendus iusto odit. Possimus inventore eveniet accusamus error amet eius aut
-                accusantium et. Non odit consequatur repudiandae sequi ea odio molestiae. Enim possimus sunt inventore in
-                est ut optio sequi unde.</p>
+              <p>This spring, get ready to dive into the world of quantum computing form the ANU Quantum Springboard. Hands-on coding workshops, coding challenge, lab tours, industry talks, Networking event and much more!</p>
             </div>
             <div class="col-lg-3">
               <h3>Where</h3>
@@ -129,7 +128,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Event Speakers<br></h2>
-        Coming Soon...!
+        <p>Coming Soon...!</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -666,7 +665,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Event Venue<br></h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Let's gather at the Physics Auditorium in the Research School of Physics, ANU</p>
       </div><!-- End Section Title -->
 
       <div class="container-fluid" data-aos="fade-up">
@@ -883,7 +882,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Partners</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Powered and supported by:</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -898,6 +897,7 @@
             <img src="assets/Fall Fest Graphics/Illustration Exports/IBM Quantum Logo.png" class="img-fluid" alt="">
           </div><!-- End Client Item -->
 
+          <template>
           <div class="col-xl-3 col-md-4 client-logo">
             <img src="assets/img/clients/client-3.png" class="img-fluid" alt="">
           </div><!-- End Client Item -->
@@ -921,6 +921,7 @@
           <div class="col-xl-3 col-md-4 client-logo">
             <img src="assets/img/clients/client-8.png" class="img-fluid" alt="">
           </div><!-- End Client Item -->
+          </template>
 
         </div>
 
@@ -934,9 +935,10 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Frequently Asked Questions</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Please wait while we make some repairs to the matrix!</p>
       </div><!-- End Section Title -->
 
+      <template>
       <div class="container">
 
         <div class="row justify-content-center">
@@ -1000,6 +1002,7 @@
         </div>
 
       </div>
+      </template>
 
     </section><!-- /Faq Section -->
 
@@ -1083,9 +1086,10 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Coming soon</p>
       </div><!-- End Section Title -->
 
+      <template>
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4">
@@ -1156,6 +1160,7 @@
         </div>
 
       </div>
+      </template>
 
     </section><!-- /Contact Section -->
 
