deleted extra assets

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <div class="row">
             <div class="col-lg-6">
               <h2>About The Event</h2>
-              <p>This spring, get ready to dive into the world of quantum computing form the ANU Quantum Springboard. Hands-on coding workshops, coding challenge, lab tours, industry talks, Networking event and much more!</p>
+              <p>This spring, get ready to launch into the world of quantum computing form the ANU Quantum Springboard. Hands-on coding workshops, coding challenges, lab tours, industry talks, networking event and much more!</p>
             </div>
             <div class="col-lg-3">
               <h3>Where</h3>
@@ -219,7 +219,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Event Schedule<br></h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <!-- <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p> -->
       </div><!-- End Section Title -->
 
       <div class="container">
