changed venue images

--- a/index.html
+++ b/index.html
@@ -693,8 +693,8 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="assets/img/venue-gallery/new-physics-building-front-board.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/new-physics-building-front-board.jpg" alt="" class="img-fluid">
+              <a href="assets/img/venue-gallery/Research_School_of_Physics,_ANU,_Canberra,_2022,_05.jpg" class="glightbox" data-gall="venue-gallery">
+                <img src="assets/img/venue-gallery/Research_School_of_Physics,_ANU,_Canberra,_2022,_05.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
