add venue image credits

--- a/index.html
+++ b/index.html
@@ -696,14 +696,10 @@
               <a href="assets/img/venue-gallery/Research_School_of_Physics,_ANU,_Canberra,_2022,_05.jpg" class="glightbox" data-gall="venue-gallery">
                 <img src="assets/img/venue-gallery/Research_School_of_Physics,_ANU,_Canberra,_2022,_05.jpg" alt="" class="img-fluid">
               </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="venue-gallery">
-              <a href="assets/img/venue-gallery/ANU_Physics_External.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/ANU_Physics_External.jpg" alt="" class="img-fluid">
-              </a>
+              <!-- <small style="font-size:0.75rem;color:#6c757d;">
+                Photo by <a href="https://commons.wikimedia.org/wiki/User:Kgbo" style="color:#6c757d;text-decoration:none;">Kgbo</a>, 
+                <a href="https://creativecommons.org/licenses/by-sa/4.0/" style="color:#6c757d;text-decoration:none;">CC BY-SA 4.0</a>
+              </small> -->
             </div>
           </div>
 
@@ -711,6 +707,14 @@
             <div class="venue-gallery">
               <a href="assets/img/venue-gallery/phys-audi.jpg" class="glightbox" data-gall="venue-gallery">
                 <img src="assets/img/venue-gallery/phys-audi.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4">
+            <div class="venue-gallery">
+              <a href="assets/img/venue-gallery/Research_School_of_Physics,_ANU,_Canberra,_2022,_07.jpg" class="glightbox" data-gall="venue-gallery">
+                <img src="assets/img/venue-gallery/Research_School_of_Physics,_ANU,_Canberra,_2022,_07.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -757,6 +761,15 @@
 
         </div>
       </div>
+      <div class="venue-credits text-center mt-3">
+  <p style="font-size:0.75rem;color:#6c757d;">
+    Images by 
+    <a href="https://commons.wikimedia.org/wiki/User:Kgbo" target="_blank">kgbo</a> 
+    from <a href="https://commons.wikimedia.org/wiki/" target="_blank">Wikimedia Commons</a>, 
+    licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">CC BY-SA 4.0</a>.
+  </p>
+</div>
+
 
     </section><!-- /Venue Section -->
 
@@ -1232,6 +1245,7 @@
       </div>
     </div>
     </template>
+    
 
     <div class="copyright text-center">
       <div class="container d-flex flex-column flex-lg-row justify-content-center justify-content-lg-between align-items-center">
@@ -1246,6 +1260,7 @@
             <!-- Licensing information: https://bootstrapmade.com/license/ -->
             <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
             Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            <!-- Images by <a href="https://commons.wikimedia.org/wiki/User:Kgbo">Kgbo</a> from <a href="https://commons.wikimedia.org/wiki/">Wikimedia Commons</a>, licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>. -->
           </div>
         </div>
 
